--- a/Apps/HelloWorld2.html
+++ b/Apps/HelloWorld2.html
@@ -28,8 +28,17 @@
   <body>
     <div id="cesiumContainer"></div>
     <script>
-      const viewer = new Cesium.Viewer("cesiumContainer");
-	
+      
+	var viewer = new Cesium.Viewer(”cesiumContainer”, {
+ baseLayerPicker: true,
+ timeline : true,
+ animation : false,
+ homeButton: true,
+ vrButton: false,
+ geocoder: true,
+ sceneModePicker: false,
+ navigationHelpButton: true
+});
     </script>
   </body>
 </html>
