--- a/Apps/HelloWorld2.html
+++ b/Apps/HelloWorld2.html
@@ -29,7 +29,7 @@
     <div id="cesiumContainer"></div>
     <script>
       
-	var viewer = new Cesium.Viewer(”cesiumContainer”, {
+	const viewer = new Cesium.Viewer(”cesiumContainer”, {
  baseLayerPicker: true,
  timeline : true,
  animation : false,
