--- a/Apps/HelloWorld2.html
+++ b/Apps/HelloWorld2.html
@@ -30,14 +30,10 @@
     <script>
       
 	const viewer = new Cesium.Viewer(”cesiumContainer”, {
- baseLayerPicker: true,
- timeline : true,
- animation : false,
- homeButton: true,
- vrButton: false,
- geocoder: true,
- sceneModePicker: false,
- navigationHelpButton: true
+  infoBox: false,
+  selectionIndicator: false,
+  shadows: true,
+  shouldAnimate: true,
 });
     </script>
   </body>
