--- a/Apps/HelloWorld2.html
+++ b/Apps/HelloWorld2.html
@@ -29,12 +29,7 @@
     <div id="cesiumContainer"></div>
     <script>
       
-	const viewer = new Cesium.Viewer(”cesiumContainer”, {
-  infoBox: false,
-  selectionIndicator: false,
-  shadows: true,
-  shouldAnimate: true,
-});
+	var viewer = new Cesium.Viewer(”cesiumContainer”);
     </script>
   </body>
 </html>
