--- a/Apps/HelloWorld2.html
+++ b/Apps/HelloWorld2.html
@@ -28,8 +28,7 @@
   <body>
     <div id="cesiumContainer"></div>
     <script>
-      
-	const viewer = new Cesium.Viewer(”cesiumContainer”);
+	const viewer = new Cesium.Viewer("cesiumContainer");
     </script>
   </body>
 </html>
