--- a/Apps/HelloWorld2.html
+++ b/Apps/HelloWorld2.html
@@ -44,7 +44,7 @@ var point = viewer.entities.add({
         }
     });
 
-    viewer.zoomTo(viewer.entities);　//レイヤにズーム
+    //viewer.zoomTo(viewer.entities);　//レイヤにズーム
     </script>
   </body>
 </html>
