--- a/Apps/HelloWorld2.html
+++ b/Apps/HelloWorld2.html
@@ -34,7 +34,8 @@ var redLine = viewer.entities.add({
     name:"九頭竜川",
     description:"ここは九頭竜川です。",　
     polyline : {
-        positions : Cesium.Cartesian3.fromDegreesArrayHeights([136.137600,36.218795,0,
+        positions : Cesium.Cartesian3.fromDegreesArrayHeights(
+          [136.137600,36.218795,0,
           136.146183,36.210070,0,
           136.147385,36.197465,0,
           136.155109,36.191923,0,
